Fix a small glitch on mobile for the page Plakar for abackup

--- a/themes/plakarium/assets/css/main-compiled.css
+++ b/themes/plakarium/assets/css/main-compiled.css
@@ -5268,6 +5268,10 @@ details > summary {
     grid-template-columns:repeat(4, minmax(0, 1fr));
   }
 
+  .sm\:flex-row {
+    flex-direction:row;
+  }
+
   .sm\:items-start {
     align-items:flex-start;
   }
